Refactor PhoneNumberService to use constructor injection; add JaCoCo coverage guide; implement integration and unit tests for ConversationService